--- a/public/admin/html/index.html
+++ b/public/admin/html/index.html
@@ -4,40 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/modal.css">
-    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Rifa 913A</title>
 </head>
 
 <body>
-    <div class="modal form">
-        <div class="content">
-            <h2>Login do Administrador</h2>
-            <form id="login-form">
-                <label for="username">
-                    <span>Usuário:</span>
-                    <input type="text" id="username" required>
-                </label>
-                <br><br>
-                <label for="password">
-                    <span>Senha:</span>
-                    <input type="password" id="password" required>
-                </label>
-                <br><br>
-                <button type="submit">Entrar</button>
-            </form>
-        </div>
-    </div>
-
     <div id="central-box" class="central-box">
         <div id="div-logo-top">
             <img src="../../images/913.svg" alt="913A">
         </div>
         <div id="div-title">
             <h1>Rifa Solidária n°1</h1>
-            <p>Em prol da formatura do 3° ano do curso de Desenvolvimento de Sistemas da manhã (913A) do Instituto
-                Federal de Alagoas (IFAL)</p>
         </div>
         <div id="number-grid" class="dynamic-grid">
             <!-- Grid de números -->
@@ -46,21 +24,50 @@
     </div>
 
     <!-- Modal -->
-    <div id="number-modal" class="modal hidden">
+    <!-- <div id="number-modal" class="modal hidden">
         <div class="modal-content">
             <span id="close-modal" class="close">&times;</span>
             <h2 id="modal-text">Informações do número</h2>
-            <p class="lable"><em>Nome do comprador</em></p>
+            <p class="lable-text"><em>Nome</em></p>
             <p id="modal-name">Aqui o nome</p>
-            <p class="lable"><em>Telefone / Celular</em></p>
+            <p class="lable-text"><em>Tel</em></p>
             <p id="modal-tel">Aqui o tel</p>
         </div>
+    </div> -->
+
+    <!-- Modal de escolha-->
+    <div class="modal hidden" id="modal-escolha">
+        <h2 id="modal-text">Informações do número</h2>
+        <button id="cadastrarNovo">Resgatar com um novo Contribuinte</button>
+        <button id="cadastrarExistente">Resgatar com um Contribuinte existente</button>
+    </div>
+
+    <div class="modal hidden" id="modal-cadastro-novo">
+        <h2 id="modal-text">Informações do número</h2>
+        <form action="post" id="form-completo">
+            <label for="name">Nome</label>
+            <input type="text" name="name" id="name">
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email-novo">
+            <label for="tel">Telefone</label>
+            <input type="text" name="tel" id="telephone">
+            <button type="submit">Resgatar</button>
+        </form>
+    </div>
+
+    <div class="modal hidden" id="modal-cadastro-existente">
+        <h2 id="modal-text">Informações do número</h2>
+        <form action="post" id="form-existente">
+            <label for="email">Selecionar por Email</label>
+            <input type="text" name="email" id="email-existente">
+            <button type="submit">Resgatar</button>
+        </form>
     </div>
 
     <!-- Scripts -->
-    <script src="../scripts/numbers.js"></script>
-    <script src="../scripts/modal.js"></script>
-    <script src="../scripts/form.js"></script>
+    <script type="module" src="../scripts-adm/numbers.js"></script>
+    <script type="module" src="../scripts-adm/modal.js"></script>
+    <script src="../../commands.js"></script>
 </body>
 
 </html>
