--- a/public/geral/html/index.html
+++ b/public/geral/html/index.html
@@ -38,9 +38,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="../scripts/numbers.js"></script>
-    <script src="../scripts/modal.js"></script>
-    <script src="../../scripts.js"></script>
+    <script src="../scripts-geral/numbers.js"></script>
+    <script src="../scripts-geral/modal.js"></script>
 </body>
 
 </html>
