--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="central-box" class="central-box">
         <div id="div-logo-top">
-            <img src="../../images/913.svg" alt="913A">
+            <img src="../images/913.svg" alt="913A">
         </div>
         <div id="div-title">
             <h1>Rifa Solidária n°1</h1>
@@ -22,7 +22,7 @@
         <div id="number-grid" class="dynamic-grid">
             <!-- Grid de números -->
         </div>
-        <img src="../../images/pc.png" alt="pc" id="pc">
+        <img src="../images/pc.png" alt="pc" id="pc">
     </div>
 
     <!-- Modal -->
