--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -86,8 +86,9 @@
     <!-- Scripts -->
     <script type="module" src="../scripts-adm/numbers-adm.js"></script>
     <script type="module" src="../scripts-adm/modal-adm.js"></script>
-    <script src="../commands.js"></script>
-    <script src="../scripts-adm/log.js"></script>
+    <script type="module" src="../scripts-adm/commands.js"></script>
+    <script type="module" src="./scripts-adm/createHeader.js"></script>
+    <script type="module" src="../scripts-adm/log.js"></script>
     <script src="../scripts-adm/login.js"></script>
 </body>
 
