mudando index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/modal.css">
-    <link rel="icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/modal.css">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
     <title>Rifa 913A</title>
 </head>
 
 <body>
     <div id="central-box" class="central-box">
         <div id="div-logo-top">
-            <img src="../images/913.svg" alt="913A">
+            <img src="./images/913.svg" alt="913A">
         </div>
         <div id="div-title">
             <h1>Rifa Solidária n°1</h1>
@@ -23,7 +23,7 @@
         <div id="number-grid" class="dynamic-grid">
             <!-- Grid de números -->
         </div>
-        <img src="../images/pc.png" alt="pc" id="pc">
+        <img src="./images/pc.png" alt="pc" id="pc">
     </div>
 
     <!-- Modal -->
@@ -39,8 +39,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="../scripts-geral/numbers.js"></script>
-    <script src="../scripts-geral/modal.js"></script>
+    <script src="./scripts-geral/numbers.js"></script>
+    <script src="./scripts-geral/modal.js"></script>
 </body>
 
 </html>
